# physics2

./: .gitignore  API_DOCUMENTATION.md  CUDA_IMPLEMENTATION.md  Dockerfile  README.md  README_MONITORING.md  build_accelerated.sh  build_and_test.sh  celery_worker.py  development_summary.md  docker-compose.yml  goal.md  gpu_acceleration_summary.md  realtime_features_summary.md  requirements.txt  response.json  run.py  run_advanced_analysis.sh  run_gpu_acceleration.sh  run_new_features.sh  run_realtime_features.sh  run_visualization_features.sh  start.sh  test_acceleration.py  test_api.py  test_contact_angle.py  test_surface_tension.py
app/: main.py
app/api/: experiment.py
app/config/: database.py  settings.py
app/experiments/: __init__.py  karman_vortex.py  registry.py
app/models/: base.py  experiment.py  schemas.py
app/services/: storage.py
app/tasks/: __init__.py  worker.py
docs/: accelerated_multiphase.md  multiphase_flow.md
examples/: multiphase_with_physics.py
exports/: sim_60fcfcc7_1_c0451c96-7bf1-455c-a020-89052064730c.json
metrics/: metrics_20250710_17.json  metrics_20250710_18.json  metrics_20250710_19.json
scripts/: add_advanced_knowledge.py  add_turbulence_knowledge.py  add_tutorials.py  build_extensions.py  clear_knowledge.py  initialize_system.py  performance_test.py  populate_knowledge.py  test_cpp_ext.py
src/: __init__.py  init_db.py  main.py
src/api/: analysis.py  auth.py  export.py  knowledge.py  monitoring.py  parameters.py  simulation.py  tutorial.py  users.py  visualization.py  websocket.py
src/benchmark/: benchmark_multiphase.py
src/core/: __init__.py  fluid_solver.py  schemas.py
src/core/advanced_physics/: __init__.py  multiphase.py  surface_tension.py  thermal.py
src/core/cpp_ext/: README.md  __init__.py  fluid_solver_core.cpp  setup.py
src/core/cuda_accelerated/: CMakeLists.txt  multiphase_bindings.cpp  multiphase_core.cpp  multiphase_cuda.cu
src/core/cuda_ext/: README.md  __init__.py  build_cuda_ext.sh  cuda_advect.cu  cuda_compute_vorticity.cu  cuda_diffuse.cu  cuda_kernels.cpp  cuda_project.cu  cuda_solver.py  setup.py  test_cuda.py
src/database/: __init__.py  database.py
src/models/: __init__.py  models.py  multiphase_accelerated.py  simulation_data.py
src/schemas/: __init__.py  schemas.py
src/services/: data_service.py
src/utils/: __init__.py  error_handler.py  logger.py  monitoring.py
static/: api-docs.html  index.html  login.html  monitoring.html
static/css/: style.css
static/js/: app.js  auth.js  monitoring-dashboard.js  visualization.js
tests/: test_multiphase.py
